    instead of the Configure() global function.

  - The Configure() subsystem now caches build failures in a .sconsign
    file in the subdirectory, not a .cache file.  This may cause
    tests to be re-executed the first time after you install 0.97.

  - Additional significant internal cleanups in the Configure() subsystem
    and its tests.



RELEASE 0.96.1 - XXX

  From Craig Bachelor:

  - Handle white space in the executable Python path name within in MSVS
    project files by quoting the path.

  - Correct the format of a GUID string in a solution (.dsw) file so
    MSVS can correctly "build enable" a project.

  From Steven Knight:

  - Add a must_exist flag to Delete() to let the user control whether
    it's an error if the specified entry doesn't exist.  The default
    behavior is now to silently do nothing if it doesn't exist.

  - Package up the new Platform/darwin.py, mistakenly left out of 0.96.

  - Make the scons.bat REM statements into @REM so they aren't printed.

  - Make the SCons packaging SConscript files platform independent.

  From Anthony Roach:

  - Fix scanning of pre-compiled header (.pch) files for #includes,
    broken in 0.96.



RELEASE 0.96 - Wed, 18 Aug 2004 13:36:40 +0000

  From Chad Austin:

  - Make the CacheDir() directory if it doesn't already exist.

  - Allow construction variable substitutions in $LIBS specifications.

  - Allow the emitter argument to a Builder() to be or expand to a list
    of emitter functions, which will be called in sequence.

  - Suppress null values in construction variables like $LIBS that use
    the internal _concat() function.

  - Remove .dll files from the construction variables searched for
    libraries that can be fed to Win32 compilers.

  From Chad Austin and Christoph Wiedemann:

  - Add support for a $RPATH variable to supply a list of directories
    to search for shared libraries when linking a program.  Used by
    the GNU and IRIX linkers (gnulink and sgilink).
